--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
         </div>
     </div>
 
+    <!-- Contentfull Js -->
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+    <!-- App.js -->
     <script src="app.js"></script>
 
 </body>
